# YoutubePlaylist

./: CMakeLists.txt  CSVTutorialList.cpp  CSVTutorialList.h  FileTutorialList.cpp  FileTutorialList.h  GUI.cpp  GUI.h  HTMLTutorialList.cpp  HTMLTutorialList.h  README.md  Untitled.mdj  administrator.cpp  administrator.h  adminwindow.cpp  adminwindow.h  adminwindow.ui  controller.cpp  controller.h  csv.cpp  csv.h  csv.ui  example.csv  example.html  gui2.cpp  gui2.h  gui2.ui  main.cpp  main.h  tutorial.cpp  tutorial.h  tutorialValidator.cpp  tutorialValidator.h  tutorials  tutorials.csv  tutorials.html  tutorials.txt  user.html  userwindow.cpp  userwindow.h  userwindow.ui
